[package]
name = "multisig"
version = "0.1.0"
authors = ["Amin Sameti <mamins1376@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
eframe = "^0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
js-sys = "^0.3"
console_error_panic_hook = "^0.1"
wasm-bindgen-futures = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
features = [
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',

  'Url',
  'Blob',
  'BlobPropertyBag',

  'Worklet',
  'AudioWorklet',
  'AudioWorkletNode',
  'AudioWorkletNodeOptions',
  'MessagePort',
  'MessageEvent',

  'AudioWorkletProcessor',
  'AudioWorkletGlobalScope',
]
